--- a/softwerkskammer/views/googlemaps-component.pug
+++ b/softwerkskammer/views/googlemaps-component.pug
@@ -14,7 +14,7 @@ mixin map(location)
       var styles = [
         {
           stylers: [
-            { hue: '##c8cf7e' },
+            { hue: '#c8cf7e' },
             { saturation: -50 }
           ]
         },{
@@ -34,15 +34,23 @@ mixin map(location)
       ];
       map.setOptions({styles: styles});
       var geocoder = new google.maps.Geocoder();
-      geocoder.geocode( { 'address': '#{location}', region: 'de'}, function(results, status) {
-        if (status == google.maps.GeocoderStatus.OK) {
-          map.setCenter(results[0].geometry.location);
-          var marker = new google.maps.Marker({
-              map: map,
-              position: results[0].geometry.location
-          });
-          map.setZoom(13);
-        }
-      });
+      function showLocation(loc) {
+        geocoder.geocode({'address': loc}, function (results, status) {
+          if (status === google.maps.GeocoderStatus.OK) {
+            const theLocation = results[0].geometry.location;
+            new google.maps.Marker({ map: map, position: theLocation});
+            map.setCenter(theLocation);
+            map.setZoom(13);
+          }
+          if (status === google.maps.GeocoderStatus.ZERO_RESULTS) {
+            var parts = loc.split(/,| /);
+            if (parts.length > 1) {
+              parts.shift();
+              showLocation(parts.join().trim());
+            }
+          }
+        });
+      }
+      showLocation('#{location}');
     });
   
