--- a/softwerkskammer/lib/activities/views/get.pug
+++ b/softwerkskammer/lib/activities/views/get.pug
@@ -70,7 +70,7 @@ block content
       #map.hidden-print(style='width: ' + '100%' + '; height: ' + '450px')
 
 block scripts
-  +map(activity.location(), '100%', '450px')
+  +map(activity.location())
   script.
     displayedActivityStart = moment('#{activity.startMoment().toISOString()}');
     displayedActivityEnd = moment('#{activity.endMoment().toISOString()}');
