boyscouting the display of select2 enhanced conboboxes

--- a/softwerkskammer/frontend/less/agora.less
+++ b/softwerkskammer/frontend/less/agora.less
@@ -241,3 +241,7 @@ a {
 .photo-day > .photo-room:nth-child(odd) {
   background-color: @table-bg-accent;
 }
+
+.select2-container--bootstrap {
+  width: inherit !important;
+}
