--- a/socrates/lib/site/views/index.pug
+++ b/socrates/lib/site/views/index.pug
@@ -69,9 +69,9 @@ block content
                 small 9 - 12 Mar 2017, Ftan
             .col-sm-6
               h5
-                +extlink('http://www.socrates-conference.es/', 'SoCraTes Canaries')
+                +extlink('https://www.socracan.com', 'SoCraTes Canaries')
                 br
-                small 10 - 13 Mar 2016, Gran Canaria
+                small 6 - 9 Apr 2017, Gran Canaria
             .col-sm-6
               h5
                 +extlink('http://itakeunconf.com/', 'I T.A.K.E. Unconference')
