Update tweet text with 2017's date and new handle

--- a/socrates/views/layoutComponents.pug
+++ b/socrates/views/layoutComponents.pug
@@ -97,7 +97,7 @@ mixin contactbuttons
     i.fa.fa-fw.fa-envelope
     span.hidden-xs #{' ' + t('members.email')}
   .btn-group.dropup
-    a.btn.btn-info(href='https://twitter.com/intent/tweet?text=SoCraTes+2016+will+take+place+from+25+to+28+August.+More+at&url=http%3A%2F%2Fsocrates-conference.de%2F&hashtags=socrates_16&via=socrates_2016', title='Tweet')
+    a.btn.btn-info(href='https://twitter.com/intent/tweet?text=SoCraTes+2017+will+take+place+from+24+to+27+August.+More+at&url=http%3A%2F%2Fsocrates-conference.de%2F&hashtags=socrates_17&via=SoCraTes_Conf', title='Tweet')
       i.fa.fa-fw.fa-twitter
       span.hidden-xs #{' ' + t('general.tweet')}
     a.btn.btn-info.dropdown-toggle(data-toggle='dropdown')
