update sponsoring table according to orga-team commited changes

--- a/socrates/lib/site/views/sponsoring.pug
+++ b/socrates/lib/site/views/sponsoring.pug
@@ -51,15 +51,21 @@ block content
             th
             th Basic (750 &euro;)
             th Comfort (1500 &euro;)
-            th Premium (2500 &euro;)
+            th Premium Silver (2250 &euro;)
+            th Premium Gold (3000 &euro;)
+            th Premium Platin (3750 &euro;)
           tr
             th Slots
             td One
+            td Two
             td Three
+            td Four
             td Five
           tr
             th Mailings
             td No
+            td Yes
+            td Yes
             td Yes
             td Yes
           tr.no-print
@@ -70,7 +76,13 @@ block content
             td: a(href='mailto:sponsoring@socrates-conference.de?subject=I%20am%20interested%20in%20the%20Comfort%20Package')
               i.fa.fa-envelope-o
               span #{''} Contact us
-            td: a(href='mailto:sponsoring@socrates-conference.de?subject=I%20am%20interested%20in%20the%20Premium%20Package')
+            td: a(href='mailto:sponsoring@socrates-conference.de?subject=I%20am%20interested%20in%20the%20Premium-Silver%20Package')
+              i.fa.fa-envelope-o
+              span #{''} Contact us
+            td: a(href='mailto:sponsoring@socrates-conference.de?subject=I%20am%20interested%20in%20the%20Premium-Gold%20Package')
+              i.fa.fa-envelope-o
+              span #{''} Contact us
+            td: a(href='mailto:sponsoring@socrates-conference.de?subject=I%20am%20interested%20in%20the%20Premium-Platin%20Package')
               i.fa.fa-envelope-o
               span #{''} Contact us
 
