update sponsoring table according to orga-team commited changes

--- a/socrates/lib/site/views/sponsoring.pug
+++ b/socrates/lib/site/views/sponsoring.pug
@@ -45,22 +45,22 @@ block content
 
       .panel.panel-default
         .panel-heading
-          h4 Our Standard Packages
+          h4 Sponsored Participants
         table.table.table-condensed(style='font-size: small;')
           tr
             th
-            th Basic (750 &euro;)
-            th Comfort (1500 &euro;)
-            th Premium Silver (2250 &euro;)
-            th Premium Gold (3000 &euro;)
-            th Premium Platin (3750 &euro;)
+            th One (750 &euro;)
+            th Two (1500 &euro;)
+            th Three (2250 &euro;)
+            th Four (3000 &euro;)
+            th Five (3750 &euro;)
           tr
             th Slots
-            td One
-            td Two
-            td Three
-            td Four
-            td Five
+            td 1
+            td 2
+            td 3
+            td 4
+            td 5
           tr
             th Mailings
             td No
@@ -70,19 +70,19 @@ block content
             td Yes
           tr.no-print
             th
-            td: a(href='mailto:sponsoring@socrates-conference.de?subject=I%20am%20interested%20in%20the%20Basic%20Package')
+            td: a(href='mailto:sponsoring@socrates-conference.de?subject=I%20am%20interested%20in%20the%One%20Package')
               i.fa.fa-envelope-o
               span #{''} Contact us
-            td: a(href='mailto:sponsoring@socrates-conference.de?subject=I%20am%20interested%20in%20the%20Comfort%20Package')
+            td: a(href='mailto:sponsoring@socrates-conference.de?subject=I%20am%20interested%20in%20the%Two%20Package')
               i.fa.fa-envelope-o
               span #{''} Contact us
-            td: a(href='mailto:sponsoring@socrates-conference.de?subject=I%20am%20interested%20in%20the%20Premium-Silver%20Package')
+            td: a(href='mailto:sponsoring@socrates-conference.de?subject=I%20am%20interested%20in%20the%20Three%20Package')
               i.fa.fa-envelope-o
               span #{''} Contact us
-            td: a(href='mailto:sponsoring@socrates-conference.de?subject=I%20am%20interested%20in%20the%20Premium-Gold%20Package')
+            td: a(href='mailto:sponsoring@socrates-conference.de?subject=I%20am%20interested%20in%20the%20Four%20Package')
               i.fa.fa-envelope-o
               span #{''} Contact us
-            td: a(href='mailto:sponsoring@socrates-conference.de?subject=I%20am%20interested%20in%20the%20Premium-Platin%20Package')
+            td: a(href='mailto:sponsoring@socrates-conference.de?subject=I%20am%20interested%20in%20the%20Five%20Package')
               i.fa.fa-envelope-o
               span #{''} Contact us
 
