--- a/socrates/lib/registration/views/participationinfoform.pug
+++ b/socrates/lib/registration/views/participationinfoform.pug
@@ -2,6 +2,19 @@ include ../../../../commonComponents/pug/formComponents
 mixin participationinfoform(roomOptions, registration)
   .row
     .col-md-6
+      h3 How it works.
+      p The tickets will be given out in a lottery.
+      p.
+        To avoid "rush hour" traffic, all registrations (except for the guaranteed sponsor slots)
+        will end up on the waiting list initially. It will not matter if you register on the first day or
+        on the last one. Five days after we open the registration, there will be a draw to distribute the
+        slots to the people on the waiting lists.
+      p Please note that the draw will be (pseudo-)random and we will not influence the draw in any way.
+      p After the draft you will be notified if you are in.
+      p.
+        If you are not, you stay on the waiting list as usual. But, don't hesitate.
+        Cancelations and other issues will make slots available and we will draw them away at regular intervals.
+
       h3 Room Options
       p.
         We offer three kinds of rooms. Please choose the room you'd like and tell us for how long you will be our guest.
@@ -33,11 +46,33 @@ mixin participationinfoform(roomOptions, registration)
       p Generally speaking: The more waitinglist options you select, the better your chances are to get a spot or to improve your selected room.
       p Please be aware that we will move you to the next available room without checking back with you first. So please select only those waitinglists that you are happy with!
 
+    .col-md-6
+      h3 I'm in and now?
+      p.
+        Some of you have booked a spot in a double shared or in a junior shared room, now ist the time to specify your desired roommate.
+        Please do it as soon as possible. You can check or set your roommate in your SoCraTes profile site.
+      p.
+        All those who do not choose a roommate until end of July 2017 will be assigned to one.
+        We will fill the shared rooms with people of the same gender (as far as we know and is possible)
+      p.
+        Please verify the duration of your stay. If anything needs to be changed, send an email to
+        registration@socrates-conference.de with your desired changes. You can check this data on the registration site
+        after log in (https://www.socrates-conference.de/registration)
+      p.
+        To book until Sunday evening means participation in the workshops or code retreat - as sponsorship money is being
+        used to make this possible, please be fair and do not unnecessarily specify the Sun evening if you don't want to
+        attend some of the workshops / code retreat.
+      p.
+        Specify the correct size in the T-shirt order. Check it and change it, if necessary. If you don't want to have a
+        T-Shirt please select the "No Shirt" option.
+      p.
+        Also check your home and billing addresses at the edit profile site. You can also tell us about your food preferences / dietary restrictions
+        in the remarks and please remove old or misplaced information from it (for example room type, roommate, ...)
+
       h3 Deposit
       p.
         This year we decided against collecting a deposit. We trust that you will notify us if you cannot participate.
         If you do not notify us until 24th August, you will be charged for the first night.
-
   .row
     .col-sm-12
 
