--- a/socrates/lib/registration/views/participationinfoform.pug
+++ b/socrates/lib/registration/views/participationinfoform.pug
@@ -22,7 +22,7 @@ mixin participationinfoform(roomOptions, registration)
       ul
         li Single bed room
         li Double bed room, can only be shared
-        li Junior double bed room (one bed, 160cm wide), can be shared or occupied exclusively
+        li Junior double bed room (one bed, 160 cm x 200 cm), can be shared or occupied exclusively
       p If you stay at least until Sunday evening, we assume that you want to participate in the Coderetreat or in one of the workshops on Sunday.
       p All prices are per person and include:
       ul
