@rbra_ correction for language text.

--- a/socrates/lib/site/views/schedule.pug
+++ b/socrates/lib/site/views/schedule.pug
@@ -21,7 +21,7 @@ block content
         | . And at the same time it is so much more.
 
       h3 Format
-      p We are an international conference, and the conference language is English. Please keep all conversations English.
+      p We are an international conference, and the conference language is English. We cordially ask you to  keep all conversations in English, even for colloquial discussions.
       p
         |  The conference starts with a #{''}
         +extlink('https://en.wikipedia.org/wiki/The_World_Cafe', 'World Café')
