--- a/socrates/lib/site/views/index.pug
+++ b/socrates/lib/site/views/index.pug
@@ -57,7 +57,7 @@ block content
               span.glyphicon.glyphicon-time
               |  Check out the full schedule
 
-          p SoCraTes is an international conference, and the conference language is English. Please keep all conversations English.
+          p SoCraTes is an international conference, and the conference language is English. We cordially ask you to keep all conversations in English, even for colloquial discussions.
           .row
             .col-sm-6
               h5
