Add new accessibility site Add links to accessibility site

--- a/socrates/views/layoutComponents.pug
+++ b/socrates/views/layoutComponents.pug
@@ -55,6 +55,9 @@ mixin navbar(xs)
         li(data-nav='values.html'): a(href='/values.html', title='Values')
           span.glyphicon.glyphicon-gift
           span.hidden-sm  Values
+        li(data-nav='access.html'): a(href='/access.html', title='Accessibility')
+          span.glyphicon.glyphicon-heart-empty
+          span.hidden-sm  Accessibility
         li(data-nav='wiki')
           a(href='#', title='Wiki')
             span.glyphicon.glyphicon-book
