--- a/socrates/lib/site/views/access.pug
+++ b/socrates/lib/site/views/access.pug
@@ -1,8 +1,6 @@
 extends ../../../views/layout
-
 block title
-  | Access - SoCraTes
-
+  | Accessiblity - SoCraTes
 block content
   .row
     .col-md-12
@@ -10,9 +8,9 @@ block content
         h1 Access to SoCraTes 2017
         h3 Accessibility
         p
-          | A primary goal of SoCraTes conference is to be inclusive to the largest number of contributors, with the most varied and diverse backgrounds possible. To achieve this, SoCraTes is committed to offering as much accessibility to disabled and marginalised people as possible. Our conference venue at Hotel Park Soltau. All conference rooms are on one the same floor with step-free access. We have accessible toilets, gender neutral toilets, car parking and are only a short way from the train station.
+          | A primary goal of SoCraTes conference is to be inclusive to the largest number of contributors, with the most varied and diverse backgrounds. To achieve this, SoCraTes is committed to offering as much accessibility to marginalised groups and disabled people as possible. Our conference venue is Hotel Park Soltau. All conference rooms are on the same floor with step-free access. We have accessible toilets, gender neutral toilets, car parking and are only a short way from the train station.
           | We are aware that people have a diverse range of needs due to neurodiversity, disability, chronic illness or impairment. We will work with the venue to try and meet your needs, so that you have the possibility to be a part of this great open conference.
-          | If you have questions or specific needs, please contact Toni at
+          | If you have questions or specific needs, please contact our diversity spokeperson Toni at
           |
           a(href='mailto:accessibility@socrates-conference.de') accessibility@socrates-conference.de
           | . They'll be available online and in person at the conference. During registration, Toni will be in a different time zone (UTC+9), but will do their best to answer your questions as quickly as possible. You can also indicate your needs in the registration form.
@@ -22,13 +20,13 @@ block content
             Conference rooms are on the same floor with step-free access and there are no long ways between them. The hotel has two wheelchair accessible rooms. The conference rooms and bedrooms are in the same location and can be reached quickly. We ask all participants to make sure there is enough time between the sessions to reach the other rooms.
           h4 Seating
           p.
-            We see that some people will need access to a seat, or a seat in a particular location. We will provide priority seating in the conference rooms. Those seats will be in multiple locations near the doors, on the aisles or in the front of the room. The seats will be marked and we will ask participants to make them available to you. If you need a priority seat and wish to have a sticker indicating that, we will give you one at registration. We will also leave space for wheelchairs.
+            We see that some people will needraccess to a seat, or a seat in a particular location. We will provide priority seating in the conference rooms. Those seats will be in multiple locations near the doors, on the aisles or in the front of the room. The seats will be marked and we will ask participants to make them available to you. If you need a priority seat and wish to have a sticker indicating that, we will give you one at registration. We will also leave space for wheelchairs.
           h4 Queuing
           p.
             We understand queuing can be difficult, painful or impossible for some participants. We do not anticipate long queues during the conference, but will make participants aware to let people skip the line if necessary.
           h4 Toilets
           p.
-            There will be a gender neutral (and a wheelchair accessible) toilet near the conference rooms.
+            There will be a gender neutral and a wheelchair accessible toilet near the conference rooms.
 
           h4 Food and drinks
           p.
@@ -38,10 +36,13 @@ block content
             We understand that the social interactions and noisiness of a conference can be taxing. There are multiple quiet corners in the conference area, both inside and outside. If you need to take a longer break, the bedrooms are very near to the conference rooms.
           h4 Wheelchair accessibility
           p.
-            The hotel has two wheelchair accessible single rooms, including wheelchair accessible baths. If you require one of these rooms, indicate so in the registration form. (There is a wheelchair accessible toilet near the conference rooms.) The buffet tables are not wheelchair accessible, but we will help wheelchair users to access the food. The venue is accessible step-free from the nearby train station Soltau Nord and has plenty of parking space.
+            The hotel has two wheelchair accessible single rooms, including wheelchair accessible baths. If you require one of these rooms, indicate so in the registration form. The doors both of the conference and bedrooms are 120 cm wide. There is a wheelchair accessible toilet near the conference rooms. The buffet tables are not wheelchair accessible, but we will help wheelchair users to access the food. The venue is accessible step-free from the nearby train station Soltau Nord and has plenty of parking space.
           h4 Assistance persons
           p.
             If you need an assistance person, the assistant will have free access to the conference. When registering, indicate the name of the assistance person and register them separately.
+          h4 Assistance animals
+          p.
+            Assistance animals are welcome at the venue. The hotel has three rooms that are suitable for dogs, one single, one double and one junior double. The assitance animal has to stay with the assisted person at all times.
           h4 Deaf attendants
           p
             | If you need a sign language interpreter, please send an email to Toni at
@@ -50,7 +51,7 @@ block content
             |  with information on what sign language you need and also indicate so in the registration. We will do our best to find and hire one. If you already know a person that would work for you, let us know their contact information.
           h4 Blind and sight impaired attendants
           p.
-            (Assistance animals are welcome at the venue.) The conference program will be made available in a screen-reader compatible format during the conference. Due to the spontaneous nature of an open space conference, we cannot make it avaible before the conference. We will try to update any changes as soon as possible.
+            Assistance animals are welcome at the venue (see above). The conference program will be made available in a screen-reader compatible format during the conference. Due to the spontaneous nature of an open space conference, we cannot make it avaible before the conference. We will try to update any changes as soon as possible.
           h4 People with photosensitive epilepsy/seizures
           p.
             We will ask participants to indicate if their presentation contains strobe effects or flickering.
