More careful wording for assistance person

--- a/socrates/lib/site/views/access.pug
+++ b/socrates/lib/site/views/access.pug
@@ -39,7 +39,7 @@ block content
             The hotel has two wheelchair accessible single rooms, including wheelchair accessible baths. If you require one of these rooms, indicate so in the registration form. The doors both of the conference and bedrooms are 120 cm wide. There is a wheelchair accessible toilet near the conference rooms. The buffet tables are not wheelchair accessible, but we will help wheelchair users to access the food. The venue is accessible step-free from the nearby train station Soltau Nord and has plenty of parking space.
           h4 Assistance persons
           p.
-            If you need an assistance person, the assistant will have free access to the conference. When registering, indicate the name of the assistance person and register them separately.
+            If you need an assistance person, we will try to help with the attendance costs of the assistant. When registering, indicate the name of the assistance person and register them separately.
           h4 Assistance animals
           p.
             Assistance animals are welcome at the venue. The hotel has three rooms that are suitable for dogs, one single, one double and one junior double. The assitance animal has to stay with the assisted person at all times.
