--- a/socrates/lib/site/views/access.pug
+++ b/socrates/lib/site/views/access.pug
@@ -1,6 +1,7 @@
 extends ../../../views/layout
 block title
   | Accessiblity - SoCraTes
+
 block content
   .row
     .col-md-12
@@ -20,7 +21,7 @@ block content
             Conference rooms are on the same floor with step-free access and there are no long ways between them. The hotel has two wheelchair accessible rooms. The conference rooms and bedrooms are in the same location and can be reached quickly. We ask all participants to make sure there is enough time between the sessions to reach the other rooms.
           h4 Seating
           p.
-            We see that some people will needraccess to a seat, or a seat in a particular location. We will provide priority seating in the conference rooms. Those seats will be in multiple locations near the doors, on the aisles or in the front of the room. The seats will be marked and we will ask participants to make them available to you. If you need a priority seat and wish to have a sticker indicating that, we will give you one at registration. We will also leave space for wheelchairs.
+            We see that some people will need access to a seat, or a seat in a particular location. We will provide priority seating in the conference rooms. Those seats will be in multiple locations near the doors, on the aisles or in the front of the room. The seats will be marked and we will ask participants to make them available to you. If you need a priority seat and wish to have a sticker indicating that, we will give you one at registration. We will also leave space for wheelchairs.
           h4 Queuing
           p.
             We understand queuing can be difficult, painful or impossible for some participants. We do not anticipate long queues during the conference, but will make participants aware to let people skip the line if necessary.
