--- a/socrates/lib/site/views/values.pug
+++ b/socrates/lib/site/views/values.pug
@@ -14,7 +14,7 @@ block content
           | possible.
           | See
           |
-          a(href='access.html') accessibility
+          a(href='/access.html') accessibility
           |  for details about accessibility of the conference and venue.
         h3 Safe Environment
         p.
