--- a/socrates/lib/members/views/userinfoform.pug
+++ b/socrates/lib/members/views/userinfoform.pug
@@ -101,13 +101,13 @@ mixin userinfoform(addon, participation, sharesARoom)
     .col-sm-6
       p.
         If you believe you would benefit from someone to assist you with anything, be it coming up with a session idea, or announcing it in front
-        of 200 others at market place, or just letting them show you the premises, please check the box below.
-      +checkbox('needAssistance', 'I would like someone to assist/support me', addon.needAssistance())
+        of 200 others in the market place, or just letting them show you the premises, please check the box below.
+      +checkbox('needsAssistance', 'I would like someone to assist/support me', addon.needsAssistance())
     .col-sm-6
       p.
         Likewise, if you have been to SoCraTes or one of its sister conferences before, and you feel comfortable explaining the World Café,
         joining someone's first try at Powerpoint Karaoke, or introducing them to a bunch of others, etc. etc., please check the box below.
-      +checkbox('provideAssistance', 'I have been to SoCraTes before, and I can assist/support others', addon.provideAssistance())
+      +checkbox('canProvideAssistance', 'I have been to SoCraTes before, and I can assist/support others', addon.canProvideAssistance())
   .row#remarks
     .col-sm-12
-      +textareaPure('remarks', 'Additional remarks', addon.remarks())
+      +textareaPure('remarks', 'Additional remarks (e.g., if you require child care arrangements)', addon.remarks())
