--- a/socrates/lib/notifications/pug/changedWaitinglist.pug
+++ b/socrates/lib/notifications/pug/changedWaitinglist.pug
@@ -6,8 +6,8 @@ html
       Hello #{member.displayName()},
     p We have changed your waitinglist entry for the SoCraTes Conference 2017 as follows:
     p
-      | You are waiting for a #{' '} 
-      b #{bookingdetails.map(x => x.room).join(', ')}
+      | You are waiting for a #{' '}
+      b #{bookingdetails.desiredRooms.map(x => x.room).join(', ')}
       | .
     p We will inform you as soon as a space is available. You can then choose the number of nights you want to stay.
     p You can review and modify your participant data at #{' '}
