--- a/socrates/lib/notifications/pug/superuserWaitinglistNotification.pug
+++ b/socrates/lib/notifications/pug/superuserWaitinglistNotification.pug
@@ -4,5 +4,5 @@ html
     h3 SoCraTes Waitinglist Confirmation / Change
     p
       | #{member.displayName()} (#{member.nickname()}) is on the waitinglist for a #{' '}
-      b #{bookingdetails.map(room => room.room).join(', ')}
+      b #{bookingdetails.desiredRooms.map(room => room.room).join(', ')}
       | .
