--- a/socrates/lib/notifications/pug/changedWaitinglist.pug
+++ b/socrates/lib/notifications/pug/changedWaitinglist.pug
@@ -8,14 +8,12 @@ html
     p
       | You are waiting for a #{' '}
       b #{bookingdetails.desiredRooms.map(x => x.room).join(', ')}
-      if (bookingdetails.desiredRooms[0].until !== undefined)
-        | #{' '} for #{' '}
-        b #{bookingdetails.desiredRooms[0].nights}
-        | #{' '} nights until #{' '}
-        b #{bookingdetails.desiredRooms[0].until}
-
+      | #{' '} for #{' '}
+      b #{bookingdetails.nights}
+      | #{' '} nights until #{' '}
+      b #{bookingdetails.until}
       | .
-    p Once we have drawn the lottery and you get a spot, we will book you a room.
+    p We will inform you as soon as you got a spot through the lottery or from the waitinglist (in case you registered after the lottery deadline).
     p You can review and modify your participant data at #{' '}
       a(href=url + '/members/edit') #{url}/members/edit
 
