--- a/socrates/lib/notifications/pug/superuserWaitinglistNotification.pug
+++ b/socrates/lib/notifications/pug/superuserWaitinglistNotification.pug
@@ -5,9 +5,8 @@ html
     p
       | #{member.displayName()} (#{member.nickname()}) is on the waitinglist for a #{' '}
       b #{bookingdetails.desiredRooms.map(room => room.room).join(', ')}
-      if (bookingdetails.desiredRooms[0].until !== undefined)
-        | #{' '} for #{' '}
-        b #{bookingdetails.desiredRooms[0].nights}
-        | #{' '} nights until #{' '}
-        b #{bookingdetails.desiredRooms[0].until}
-      | .
+       | #{' '} for #{' '}
+      b #{bookingdetails.nights}
+      | #{' '} nights until #{' '}
+      b #{bookingdetails.until}
+    | .
